# AI-C-Ports

./: README.md
AIPorts/ThreeCardFlush/: CMakeLists.txt  CMakePresets.json  ThreeCardFlush.c  ThreeCardFlush.h
